--- a/frontend/app/views/personlist.html
+++ b/frontend/app/views/personlist.html
@@ -8,3 +8,13 @@
     <div class="col-lg-3">{{person.lastName}}</div>
     <div class="col-lg-1">{{person.age}}</div>
 </div>
+<div ng-hide="addingNew"><a ng-click="addingNew = true">New</a></div>
+<div ng-show="addingNew">
+    <div class="row">
+        <div class="col-lg-2"><input ng-model="newPerson.firstName"/></div>
+        <div class="col-lg-3"><input ng-model="newPerson.lastName"/></div>
+        <div class="col-lg-1"><input ng-model="newPerson.age" /></div>
+    </div>
+    <div ng-show="addingNew"><a ng-click="addPerson()">Add</a></div>
+</div>
+
