--- a/frontend/app/views/personlist.html
+++ b/frontend/app/views/personlist.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-lg-2"><input ng-model="newPerson.firstName"/></div>
         <div class="col-lg-3"><input ng-model="newPerson.lastName"/></div>
-        <div class="col-lg-1"><input ng-model="newPerson.age" /></div>
+        <div class="col-lg-1"><input ng-model="newPerson.age" type="number" /></div>
     </div>
     <div ng-show="addingNew"><a ng-click="addPerson()">Add</a></div>
 </div>
