adding tests and styles

--- a/frontend/app/views/personlist.html
+++ b/frontend/app/views/personlist.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-lg-2 header"><strong>First Name</strong></div>
+<div class="row mystuff">
+    <div class="col-lg-2 header mylabel">First Name</div>
     <div class="col-lg-3 header"><strong>Last Name</strong></div>
     <div class="col-lg-1 header"><strong>Age</strong></div>
 </div>
