--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -6,6 +6,9 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
+
+@import "mystyles.scss";
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
