--- a/frontend/app/views/personlist.html
+++ b/frontend/app/views/personlist.html
@@ -1,20 +1,27 @@
+
 <div class="row">
-    <div class="col-lg-2 header">First Name</div>
-    <div class="col-lg-3 header"><strong>Last Name</strong></div>
+    <div class="col-lg-5">Search By First Name (<a ng-click="clearSearch()">All</a>)</div>
+</div>
+<div class="row">
+    <div class="col-lg-4"><input ng-model="firstNameSearch" />&nbsp;<a ng-click="search()">Search</a></div>
+</div>
+<div class="row">
+    <div class="col-lg-2 header"><strong>First Name</strong></div>
+    <div class="col-lg-2 header"><strong>Last Name</strong></div>
     <div class="col-lg-1 header"><strong>Age</strong></div>
 </div>
 <div class="row" ng-repeat="person in people">
     <div class="col-lg-2">{{person.firstName}}</div>
-    <div class="col-lg-3">{{person.lastName}}</div>
+    <div class="col-lg-2">{{person.lastName}}</div>
     <div class="col-lg-1">{{person.age}}</div>
 </div>
 <div ng-hide="addingNew"><a ng-click="addingNew = true">New</a></div>
 <div ng-show="addingNew">
     <div class="row">
         <div class="col-lg-2"><input ng-model="newPerson.firstName"/></div>
-        <div class="col-lg-3"><input ng-model="newPerson.lastName"/></div>
+        <div class="col-lg-2"><input ng-model="newPerson.lastName"/></div>
         <div class="col-lg-1"><input ng-model="newPerson.age" type="number" /></div>
     </div>
-    <div ng-show="addingNew"><a ng-click="addPerson()">Add</a></div>
+    <div ng-show="addingNew"><a ng-click="addPerson()">Add</a>&nbsp;<a ng-click="cancelAddNew()">Add</a></div>
 </div>
 
