cleaning up form

--- a/frontend/app/views/personlist.html
+++ b/frontend/app/views/personlist.html
@@ -18,10 +18,10 @@
 <div ng-hide="addingNew"><a ng-click="addingNew = true">New</a></div>
 <div ng-show="addingNew">
     <div class="row">
-        <div class="col-lg-2"><input ng-model="newPerson.firstName"/></div>
-        <div class="col-lg-2"><input ng-model="newPerson.lastName"/></div>
-        <div class="col-lg-1"><input ng-model="newPerson.age" type="number" /></div>
+        <div class="col-lg-2"><input size="10" ng-model="newPerson.firstName"/></div>
+        <div class="col-lg-2"><input size="10" ng-model="newPerson.lastName"/></div>
+        <div class="col-lg-1"><input class="number" ng-model="newPerson.age" type="number" /></div>
     </div>
-    <div ng-show="addingNew"><a ng-click="addPerson()">Add</a>&nbsp;<a ng-click="cancelAddNew()">Add</a></div>
+    <div ng-show="addingNew"><a ng-click="addPerson()">Add</a>&nbsp;<a ng-click="cancelAddNew()">Cancel</a></div>
 </div>
 
